Fix align buttons bug with Opera Browser

--- a/Site/6ème/6ème_styles.css
+++ b/Site/6ème/6ème_styles.css
@@ -19,7 +19,7 @@ body {
     background-color: lightskyblue;
     padding: 10px;
     margin: 120px;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .redire:hover {
